NEW : application upload with version 18 features

--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "zoneless-calculator",
   "version": "0.0.0",
+  "licence": "MIT",
+  "author": "sebas ruiz",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "yarn test && ng build",
+    "build:app": "electron-builder",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test --watch --no-progress --browsers=FirefoxHeadless",
+    "test:coverage": "ng test --code-coverage --browsers=FirefoxHeadless",
+    "electron": "electron ."
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.0",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
@@ -27,12 +31,40 @@
     "@angular/cli": "^18.2.7",
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.20",
+    "electron": "^32.1.2",
+    "electron-builder": "^25.1.7",
+    "electron-packager": "^17.1.2",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
+    "karma-firefox-launcher": "^2.1.3",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
     "typescript": "~5.5.2"
+  },
+  "build:app": {
+    "name": "zoneless-calculator",
+    "version": "0.0.0",
+    "main": "main.js",
+    "description": "calculator app",
+    "build": {
+      "appId": "com.sebasruiz09.calculator",
+      "linux": {
+        "target": [
+          "AppImage",
+          "tar.gz"
+        ],
+        "category": "Utility",
+        "maintainer": "sebasruiz09",
+        "desktop": {
+          "Name": "calculator",
+          "Comment": "basic calculator app"
+        }
+      }
+    }
   }
 }
